traefik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flask-hello-world
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`localhost`) || PathPrefix(`/`)
      kind: Rule
      services:
        - name: flask-hello-world
          port: 8080
      middlewares:
        - name: ip-whitelist
